[package]
name = "follow-up-github-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
urlencoding = "2.1.2"
chrono = "0.4.24"
flowsnet-platform-sdk = "0.1.1"
github-flows = "0.4.0"
http_req_wasi = { version = "0.10.2" }
openai-flows = "0.4.1"
schedule-flows = "0.1.10"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.93"
# serde_urlencoded = "0.7.1"
slack-flows = "0.2.6"
